[gd_scene load_steps=4 format=3 uid="uid://y6bboatewubh"]

[ext_resource type="Theme" uid="uid://cf6o5io44h03f" path="res://Elemental Adventure theme.tres" id="1_4wsq5"]
[ext_resource type="Script" uid="uid://yrodbiwjb5bx" path="res://Scripts/Pause menu.gd" id="1_77nxw"]
[ext_resource type="FontFile" uid="uid://dsgyxibyhxj10" path="res://PressStart2P.ttf" id="2_8qk3t"]

[node name="Pause menu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_77nxw")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4wsq5")

[node name="Credits" type="Label" parent="."]
process_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 456.0
grow_vertical = 0
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
theme_override_font_sizes/font_size = 24
text = "make by Michael2911"

[node name="Title" type="Label" parent="."]
process_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -585.0
offset_right = 585.0
offset_bottom = 140.0
grow_horizontal = 2
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
theme_override_font_sizes/font_size = 100
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause menu" type="VBoxContainer" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -153.0
offset_right = 304.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4wsq5")

[node name="return" type="Button" parent="Pause menu"]
process_mode = 3
layout_mode = 2
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
text = "Return"

[node name="reset player" type="Button" parent="Pause menu"]
process_mode = 3
layout_mode = 2
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
text = "Reset player"

[node name="Settings" type="Button" parent="Pause menu"]
process_mode = 3
layout_mode = 2
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
text = "Settings"

[node name="back" type="Button" parent="Pause menu"]
process_mode = 3
layout_mode = 2
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
text = "Back"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -196.0
offset_right = 279.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
theme = ExtResource("1_4wsq5")
text = "SFX"

[node name="Volume" type="HSlider" parent="Options"]
layout_mode = 2
max_value = 0.8
step = 0.001

[node name="Label2" type="Label" parent="Options"]
layout_mode = 2
theme = ExtResource("1_4wsq5")
text = "Music"

[node name="Volume 2" type="HSlider" parent="Options"]
layout_mode = 2
max_value = 0.8
step = 0.001

[node name="CheckButton" type="CheckButton" parent="Options"]
layout_mode = 2
theme = ExtResource("1_4wsq5")
text = "FullScreen"

[node name="save" type="Button" parent="Options"]
process_mode = 3
layout_mode = 2
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
text = "Save
"

[node name="delete data" type="Button" parent="Options"]
layout_mode = 2
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
text = "Delete data
"

[node name="Back Pause Menu" type="Button" parent="Options"]
layout_mode = 2
theme = ExtResource("1_4wsq5")
theme_override_fonts/font = ExtResource("2_8qk3t")
text = "Back"

[connection signal="pressed" from="Pause menu/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Pause menu/reset player" to="." method="_on_reset_player_pressed"]
[connection signal="pressed" from="Pause menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Pause menu/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Options/Volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="Options/Volume 2" to="." method="_on_volume_2_value_changed"]
[connection signal="toggled" from="Options/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Options/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Options/delete data" to="." method="_on_delete_data_pressed"]
[connection signal="pressed" from="Options/Back Pause Menu" to="." method="_on_back_pause_menu_pressed"]
